<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".ui.activities.EditProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">


        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/TextViewBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toRightOf="@id/ivBack"
            android:text="@string/edit"
            android:textColor="#000"
            android:textSize="19sp" />

    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:hint="@string/first_name"
                android:paddingStart="10dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:hint="@string/Last_name"
                android:paddingStart="10dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etDob"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:hint="@string/Date_of_birth"
                android:paddingStart="10dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:hint="@string/City"
                android:paddingStart="10dp"
                android:textSize="16sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/tvBirthTime"
                    style="@style/TextViewRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/birth_time"
                    android:textSize="16sp" />

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner"
                    android:layout_width="70dp"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="26dp"
                    android:layout_toRightOf="@+id/tvBirthTime"
                    android:background="@drawable/stoke_spinner"
                    android:hint="1"
                    android:padding="6dp"
                    android:paddingStart="10dp"
                    app:ms_hint="10" />

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinnerTwo"
                    android:layout_width="70dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="16dp"
                    android:layout_toRightOf="@+id/spinner"
                    android:background="@drawable/stoke_spinner"
                    android:hint="2"
                    android:padding="12dp"
                    android:paddingStart="10dp"
                    app:ms_hint="10" />

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinnerThree"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginStart="16dp"
                    android:layout_toRightOf="@+id/spinnerTwo"
                    android:background="@drawable/stoke_spinner"
                    android:hint="AM"
                    app:ms_hint="AM"
                    android:padding="12dp"
                    android:paddingStart="10dp"
                    app:ms_hint_color="#000" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="46dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/tvGender"
                    style="@style/TextViewRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/Gender"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/tvMale"
                    style="@style/TextViewRegular"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="44dp"
                    android:layout_toRightOf="@+id/tvGender"
                    android:background="@drawable/round_grey"
                    android:gravity="center_horizontal"
                    android:padding="6dp"
                    android:text="@string/Male"
                    android:textColor="#656565"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tvFemale"
                    style="@style/TextViewRegular"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_toRightOf="@+id/tvMale"
                    android:background="@drawable/round_grey"
                    android:gravity="center_horizontal"
                    android:padding="6dp"
                    android:text="@string/Female"
                    android:textColor="#656565"
                    android:textSize="14sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/Save"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"
                android:layout_marginEnd="26dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="70dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>